[package]
name = "arcnet"
version = "0.1.0"
authors = ["Kirill Dudnik <prog.me.2017@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "arcnet"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
units = { git = "https://github.com/alt-net/units.git" }
esp-idf-sys = "0.35.0"
esp-idf-svc = { version = "0.49", default-features = false }
esp-idf-hal = "0.44.1"
log = { version = "0.4", default-features = false }
anyhow = "1.0.86"
toml-cfg = "0.2.0"
#http = "1.1.0"
embedded-svc = { version = "0.28.0" }
embedded-hal = "1.0.0"
async-trait = "0.1.83"
futures = "0.3.31"

[build-dependencies]
embuild = "0.32.0"
uuid   = { version = "=1.9.1", features = ["v4"] }
anyhow = "1.0.86"
toml-cfg = "0.2.0"
